PrintList done & check

--- a/Manpower_MVC/Views/PrintList/EmpSal.cshtml
+++ b/Manpower_MVC/Views/PrintList/EmpSal.cshtml
@@ -6,11 +6,7 @@
 
 <input type="button" value="列印" class="btn btn-success" onclick="window.open('@Url.Action("PrintEmpSal")')" />
 
-<p>
-    <h2>出工薪資總表</h2>
-</p>
-
-<table class="table table-striped">
+<table class="table">
     <tr>
         <th colspan="3">
          
@@ -59,40 +55,45 @@
             @Html.DisplayNameFor(model => model.Sum)
         </th>
     </tr>
-@foreach (var item in Model) {
+ </table>
+<div style="overflow:auto; max-height: 336px">
+    <table class="table">
+        @foreach (var item in Model)
+        {
 
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmpID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmpName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WorkCate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SalaryDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Salary)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OvertimeHr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OvertimeSal)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverOvertimeHr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverOvertimeSal)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sum)
-        </td>
-    </tr>
-}
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmpID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmpName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.WorkCate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SalaryDay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Salary)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OvertimeHr)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OvertimeSal)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OverOvertimeHr)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OverOvertimeSal)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sum)
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
