--- a/Manpower_MVC/Views/PrintList/PrintEmpSal.cshtml
+++ b/Manpower_MVC/Views/PrintList/PrintEmpSal.cshtml
@@ -8,6 +8,10 @@
 
 <html>
 <head>
+    @if (ViewBag.month < 10)
+    {
+        ViewBag.month = "0" + ViewBag.month;
+    }
     <title>出工薪資總表</title>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
@@ -15,95 +19,100 @@
     @Styles.Render("~/Bundles/css")
 </head>
 <body onload="window.print(); window.close();">
-    <p>
-        <h2>出工薪資總表</h2>
-    </p>
-    <table class="table table-striped">
-        <tr>
-            <th colspan="3">
-
-            </th>
-            <th colspan="2">
-                日薪(天)
-            </th>
-            <th colspan="2">
-                加班時數(小時)
-            </th>
-            <th colspan="2">
-                超時時數(小時)
-            </th>
-            <th>
-            </th>
-        </tr>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.EmpID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmpName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.WorkCate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SalaryDay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Salary)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OvertimeHr)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OvertimeSal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OverOvertimeHr)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OverOvertimeSal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sum)
-            </th>
-        </tr>
-        @foreach (var item in Model)
-        {
-
+    <div style="text-align:center; font-weight:bolder;">
+        <p>
+            <h4>出工薪資總表</h4>
+        </p>
+    </div>
+    <p> </p>
+    <p> </p>
+    <div style="font-size:small">
+        <table class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmpID)
+                <td colspan="3">
+
+                </td>
+                <td colspan="2" align="center">
+                    日薪(天)
+                </td>
+                <td colspan="2" align="center">
+                    加班時數(小時)
+                </td>
+                <td colspan="2" align="center">
+                    超時時數(小時)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.EmpName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.WorkCate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SalaryDay)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Salary)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OvertimeHr)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OvertimeSal)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OverOvertimeHr)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OverOvertimeSal)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Sum)
                 </td>
             </tr>
-        }
+            <tr>
+                <td width="8%" style="border-bottom: 1px solid black" align="left">
+                    @Html.DisplayNameFor(model => model.EmpID)
+                </td>
+                <td width="13%" style="border-bottom: 1px solid black" align="left">
+                    @Html.DisplayNameFor(model => model.EmpName)
+                </td>
+                <td width="16%" style="border-bottom: 1px solid black" align="left">
+                    @Html.DisplayNameFor(model => model.WorkCate)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.SalaryDay)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.Salary)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.OvertimeHr)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.OvertimeSal)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.OverOvertimeHr)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.OverOvertimeSal)
+                </td>
+                <td width="9%" style="border-bottom: 1px solid black" align="right">
+                    @Html.DisplayNameFor(model => model.Sum)
+                </td>
+            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td align="left">
+                        @Html.DisplayFor(modelItem => item.EmpID)
+                    </td>
+                    <td align="left">
+                        @Html.DisplayFor(modelItem => item.EmpName)
+                    </td>
+                    <td align="left">
+                        @Html.DisplayFor(modelItem => item.WorkCate)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.SalaryDay)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.Salary)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.OvertimeHr)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.OvertimeSal)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.OverOvertimeHr)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.OverOvertimeSal)
+                    </td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.Sum)
+                    </td>
+                </tr>
+            }
 
-    </table>
+        </table>
+    </div>
 </body>
 </html>
