--- a/Manpower_MVC/Views/Owner/CreateOwnerBuilding.cshtml
+++ b/Manpower_MVC/Views/Owner/CreateOwnerBuilding.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Manpower_MVC.Models.OwnerBuilding
 
 @{
-    ViewBag.Title = "CreateOwnerBuilding";
+    ViewBag.Title = "業主基本資料";
 }
 
-<h2>CreateOwnerBuilding</h2>
+<h2>建立工程工地資料</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -14,13 +14,6 @@
         <h4>OwnerBuilding</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.BuildingID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BuildingID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BuildingID, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.BuildingName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -47,13 +40,18 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("ListOwnerBuilding", new { id = ViewBag.ownerId })')" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "ListOwnerBuilding", new { id = ViewBag.ownerId })
-</div>
